CHANGES IN VERSION 1.12.0-1.12.1
-------------------------

    o the version number was bumped for the Bioconductor release version 3.3

    o `seqVCF_SampID()` allows a connection object instead of a file name


CHANGES IN VERSION 1.11.19-1.11.22
-------------------------

    o utilizes the official C API `R_GetConnection()` to accelerate text
      import and export, requiring R (>=v3.3.0); alternative version (backward
      compatible with R_v2.15.0) is also available on github
      (https://github.com/zhengxwen/SeqArray/releases/tag/v1.11.18)

    o ~4x speedup in the sequential version of `seqVCF2GDS()`, and
      `seqVCF2GDS()` can run in parallel

    o variables in "annotation/format/" should be two-dimensional as what
      mentioned in the vignette.


CHANGES IN VERSION 1.11.0-1.11.18
-------------------------

    o rewrite `seqSummary()`

    o a new vignette file with Rmarkdown format (replacing SeqArray-JSM2013.pdf)

    o bug fix in `seqBED2GDS()` if the total number of genotypes > 2^31
      (integer overflow)

    o bug fixes in `seqMerge()` if chromosome and positions are not unique

    o `seqStorage.Option()` is renamed to `seqStorageOption()`

    o new function `seqDigest()`

    o `seqVCF.Header()` is renamed to `seqVCF_Header()`,
      `seqVCF.SampID()` is renamed to `seqVCF_SampID()`

    o seqSetFilter(): 'samp.sel' is deprecated since v1.11.12, please use
      'sample.sel' instead

    o accelerate reading genotypes with SSE2(+13%) and AVX2(+23%)

    o new function `seqSystem()`

    o allow "$dosage" in `seqGetData()` and `seqApply()` for the dosages of
      reference allele

    o accelerate `seqSetFilterChrom()` and allow a selection with
      multiple regions

    o new methods `\S4method{seqSetFilter}{SeqVarGDSClass, GRanges}()` and
      `\S4method{seqSetFilter}{SeqVarGDSClass, GRangesList}()`

    o 'as.is' in `seqApply()` allows a 'connection' object (created by file,
      gzfile, etc)
