@@ -2,8 +2,8 @@ Package: SeqArray
 Type: Package
 Title: Big Data Management of Whole-genome Sequence Variant Calls
 Version: 1.13.1
-Date: 2016-05-11
-Depends: R (>= 2.15.0), gdsfmt (>= 1.8.0)
+Date: 2016-05-16
+Depends: R (>= 3.3.0), gdsfmt (>= 1.8.0)
 Imports: methods, S4Vectors, IRanges, GenomicRanges, SummarizedExperiment,
         Biostrings, VariantAnnotation
 LinkingTo: gdsfmt
